tests/lime/fail/tokens/macro_rest/byte_42.wsa
macro m* [push 42] m*
